--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="manifest" href="<%= BASE_URL %>manifest.json">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/x-icon" href="<%= BASE_URL %>favicon.ico">
     <!--
     <link rel="apple-touch-icon" sizes="57x57" href="<%= BASE_URL %>images/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="<%= BASE_URL %>images/icons/apple-icon-60x60.png">
